# medintel-cloud

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: pages.yml
core/: __init__.py
core/auth/: __init__.py  jwt.py  rbac.py
core/gateway/: main.py
core/models/: __init__.py  condition.py  encounter.py  medication.py  molecule.py  observation.py  patient.py  study.py
core/utils/: __init__.py  config.py  mimo_client.py
deploy/docker/: Dockerfile
docs/: README.md  about.html  docs.html  features.html  index.html  pricing.html  robots.txt
docs/api/: README.md  harness.md  minder.md
services/clinical/chroni_care/: api.py  service.py
services/clinical/med_roundtable/: api.py  service.py
services/clinical/medi_chat_rd/: api.py  service.py
services/clinical/ming_evidence/: api.py  service.py
services/cognitive_commerce/cloud_memorial/: api.py  service.py
services/cognitive_commerce/medi_slim/: api.py  models.py  service.py
services/cognitive_commerce/minder/: __init__.py  api.py  service.py
services/cognitive_commerce/tianyan/: api.py  service.py
services/drug_discovery/drugmind/: api.py  service.py
services/drug_discovery/medi_pharma/: api.py  service.py
services/drug_discovery/pharma_sim/: api.py  service.py
services/drug_discovery/virtual_cell/: api.py  service.py
services/infrastructure/openclaw_harness/: __init__.py  api.py  base.py  (+2 more)
tests/: conftest.py
tests/integration/: test_services.py
tests/unit/: test_harness.py  test_minder.py
(+30 files in other folders)
